server/src/main/java/verser/server/compiler/implementations/jj/VerificationScriptGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. VerificationScriptGrammar.java */
package verser.server.compiler.implementations.jj;
import verser.server.compiler.interfaces.VerificationScriptCompiler;
import verser.server.compiler.interfaces.VerificationScriptException;
import java.util.ArrayList;
import java.util.concurrent.atomic.AtomicInteger;
import java.util.Map;
import java.util.HashMap;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.IOException;
import java.io.InputStream;

public class VerificationScriptGrammar implements/*@bgen(jjtree)*/ VerificationScriptGrammarTreeConstants,VerificationScriptCompiler, VerificationScriptGrammarConstants {/*@bgen(jjtree)*/
  protected JJTVerificationScriptGrammarState jjtree = new JJTVerificationScriptGrammarState();public VerificationScriptGrammar()
  {
  }

  public byte [] compile(InputStream inputStream) throws VerificationScriptException
  {
    try
    {
      VerificationScriptGrammar parser = new VerificationScriptGrammar(inputStream);
      SimpleNode node = parser.VerificationScript();
      //Structure Check Visitor Block
      VisitorStructureCheck structCheckVisitor = new VisitorStructureCheck();
      VisitorResult result = node.jjtAccept(structCheckVisitor, null);
      if (!result.isSuccessful())
      {
        throw new ParseException("Structure Error Detected");
      }
      // Code Compilation VisitorBlock
      {
        CodeBuilder codeBuilder = new CodeBuilder();
        System.out.println("Done 1");

        codeBuilder.initCodeBuilder();
        System.out.println("Done 2 "+ structCheckVisitor.getNumberOfIdentifiers());

        VerificationScriptGrammarVisitor generateCodeVisitor = new VisitorGenerateCode(codeBuilder, structCheckVisitor.getNumberOfIdentifiers());
        System.out.println("Done 3");

        VisitorResult goodresult = node.jjtAccept(generateCodeVisitor, null);

        System.out.println("Done");
        return codeBuilder.getCode();
      }
    }
    catch (Exception e)
    {
      throw new VerificationScriptException(e.getMessage());
    }
  }

  final public void Identifier() throws ParseException {
 /*@bgen(jjtree) Identifier */
  VS_Identifier jjtn000 = new VS_Identifier(JJTIDENTIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(WORD);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Integer() throws ParseException {
 /*@bgen(jjtree) Integer */
  VS_Integer jjtn000 = new VS_Integer(JJTINTEGER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void String() throws ParseException {
 /*@bgen(jjtree) String */
  VS_String jjtn000 = new VS_String(JJTSTRING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(STRING);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Type() throws ParseException {
 /*@bgen(jjtree) Type */
  VS_Type jjtn000 = new VS_Type(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(TYPE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Void() throws ParseException {
 /*@bgen(jjtree) Void */
  VS_Void jjtn000 = new VS_Void(JJTVOID);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VOID);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void IntegerLiteral() throws ParseException {
 /*@bgen(jjtree) IntegerLiteral */
  VS_IntegerLiteral jjtn000 = new VS_IntegerLiteral(JJTINTEGERLITERAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        Integer();
        break;
      case WORD:
        Identifier();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AllLiteral() throws ParseException {
 /*@bgen(jjtree) AllLiteral */
  VS_AllLiteral jjtn000 = new VS_AllLiteral(JJTALLLITERAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
      case WORD:
        IntegerLiteral();
        break;
      case STRING:
        String();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void IdentifierList() throws ParseException {
 /*@bgen(jjtree) IdentifierList */
  VS_IdentifierList jjtn000 = new VS_IdentifierList(JJTIDENTIFIERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        Identifier();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void TypeList() throws ParseException {
 /*@bgen(jjtree) TypeList */
  VS_TypeList jjtn000 = new VS_TypeList(JJTTYPELIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        Type();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void TypeDeclaration() throws ParseException {
 /*@bgen(jjtree) TypeDeclaration */
  VS_TypeDeclaration jjtn000 = new VS_TypeDeclaration(JJTTYPEDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE:
        Type();
        break;
      case VOID:
        Void();
        break;
      case OPENCBRACKET:
        jj_consume_token(OPENCBRACKET);
        TypeList();
        jj_consume_token(CLOSECBRACKET);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(FLOW);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE:
        Type();
        break;
      case VOID:
        Void();
        break;
      case OPENCBRACKET:
        jj_consume_token(OPENCBRACKET);
        TypeList();
        jj_consume_token(CLOSECBRACKET);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CLOSEBRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void IntegerLiteralList() throws ParseException {
 /*@bgen(jjtree) IntegerLiteralList */
  VS_IntegerLiteralList jjtn000 = new VS_IntegerLiteralList(JJTINTEGERLITERALLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        Expression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ALLLiteralList() throws ParseException {
 /*@bgen(jjtree) ALLLiteralList */
  VS_ALLLiteralList jjtn000 = new VS_ALLLiteralList(JJTALLLITERALLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2147483647)) {
        Expression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRING:
        case INTEGER:
        case WORD:
          AllLiteral();
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        if (jj_2_2(2147483647)) {
          Expression();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case STRING:
          case INTEGER:
          case WORD:
            AllLiteral();
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void CapabilityDeclaration() throws ParseException {
 /*@bgen(jjtree) CapabilityDeclaration */
  VS_CapabilityDeclaration jjtn000 = new VS_CapabilityDeclaration(JJTCAPABILITYDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SERVICE);
      String();
      Identifier();
      TypeDeclaration();
      jj_consume_token(BY);
      String();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Additive() throws ParseException {
 /*@bgen(jjtree) Additive */
  VS_Additive jjtn000 = new VS_Additive(JJTADDITIVE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ADDITIVEOP);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void SimpleExpression() throws ParseException {
 /*@bgen(jjtree) SimpleExpression */
  VS_SimpleExpression jjtn000 = new VS_SimpleExpression(JJTSIMPLEEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      IntegerLiteral();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDITIVEOP:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        Additive();
        IntegerLiteral();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Relation() throws ParseException {
 /*@bgen(jjtree) Relation */
  VS_Relation jjtn000 = new VS_Relation(JJTRELATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(RELATIONOP);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Logic() throws ParseException {
 /*@bgen(jjtree) Logic */
  VS_Logic jjtn000 = new VS_Logic(JJTLOGIC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(LOGICALOP);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.value = (String) (t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void RelationExpression() throws ParseException {
 /*@bgen(jjtree) RelationExpression */
  VS_RelationExpression jjtn000 = new VS_RelationExpression(JJTRELATIONEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SimpleExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RELATIONOP:
        Relation();
        SimpleExpression();
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  VS_Expression jjtn000 = new VS_Expression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      RelationExpression();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOGICALOP:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        Logic();
        RelationExpression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ArrayALLInNode() throws ParseException {
 /*@bgen(jjtree) ArrayALLInNode */
  VS_ArrayALLInNode jjtn000 = new VS_ArrayALLInNode(JJTARRAYALLINNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENCBRACKET);
      ALLLiteralList();
      jj_consume_token(CLOSECBRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ArrayIntegerInNode() throws ParseException {
 /*@bgen(jjtree) ArrayIntegerInNode */
  VS_ArrayIntegerInNode jjtn000 = new VS_ArrayIntegerInNode(JJTARRAYINTEGERINNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENCBRACKET);
      IntegerLiteralList();
      jj_consume_token(CLOSECBRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ArrayOutNode() throws ParseException {
 /*@bgen(jjtree) ArrayOutNode */
  VS_ArrayOutNode jjtn000 = new VS_ArrayOutNode(JJTARRAYOUTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENCBRACKET);
      IdentifierList();
      jj_consume_token(CLOSECBRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void CapabilityNode() throws ParseException {
 /*@bgen(jjtree) CapabilityNode */
  VS_CapabilityNode jjtn000 = new VS_CapabilityNode(JJTCAPABILITYNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPENSQBRACKET);
      Identifier();
      jj_consume_token(CLOSESQBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOW:
        jj_consume_token(FLOW);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPENCBRACKET:
          ArrayALLInNode();
          break;
        default:
          jj_la1[13] = jj_gen;
          if (jj_2_3(2147483647)) {
            Expression();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case STRING:
            case INTEGER:
            case WORD:
              AllLiteral();
              break;
            default:
              jj_la1[14] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void IdentifierFlowStatement() throws ParseException {
 /*@bgen(jjtree) IdentifierFlowStatement */
  VS_IdentifierFlowStatement jjtn000 = new VS_IdentifierFlowStatement(JJTIDENTIFIERFLOWSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      jj_consume_token(FLOW);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPENSQBRACKET:
        CapabilityNode();
        break;
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_4(2147483647)) {
          Expression();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
